# rt-vamp-plugin-sdk

./: .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  EntryPoint_8hpp.html  EntryPoint_8hpp__dep__incl.map  EntryPoint_8hpp__dep__incl.md5  EntryPoint_8hpp__incl.map  EntryPoint_8hpp__incl.md5  EntryPoint_8hpp_source.html  LICENSE  PluginExt_8hpp.html  PluginExt_8hpp__dep__incl.map  PluginExt_8hpp__dep__incl.md5  PluginExt_8hpp__incl.map  PluginExt_8hpp__incl.md5  PluginExt_8hpp_source.html  PluginHostAdapter_8hpp.html  PluginHostAdapter_8hpp__incl.map  PluginHostAdapter_8hpp__incl.md5  PluginHostAdapter_8hpp_source.html  PluginKey_8hpp.html  PluginKey_8hpp__dep__incl.map  PluginKey_8hpp__dep__incl.md5  PluginKey_8hpp__incl.map  PluginKey_8hpp__incl.md5  PluginKey_8hpp_source.html  PluginLibrary_8hpp.html  PluginLibrary_8hpp__dep__incl.map  PluginLibrary_8hpp__dep__incl.md5  PluginLibrary_8hpp__incl.map  PluginLibrary_8hpp__incl.md5  PluginLibrary_8hpp_source.html  PluginLoader_8hpp_source.html  README.md  README_8md.html  annotated.html  classes.html  classrtvamp_1_1hostsdk_1_1Plugin-members.html  (+135 more)
benchmarks/: CMakeLists.txt  benchmarks.py
benchmarks/hostsdks/: CMakeLists.txt  DescriptorRMS.hpp  main.cpp
benchmarks/microbenchmarks/: CMakeLists.txt  hostsdk.cpp  pluginext.cpp  pluginloader.cpp
benchmarks/plugin-sdk/: CMakeLists.txt  RMS.hpp  main.cpp
benchmarks/pluginsdks/: CMakeLists.txt  RMS.hpp  main.cpp
benchmarks/sdks/: CMakeLists.txt  DescriptorRMS.hpp  RMS.cpp  RMS.hpp  benchmark_hostsdks.cpp  benchmark_pluginsdks.cpp  benchmark_sdks.cpp  helper.hpp
benchmarks/sdks/results/: benchmark_sdks_armv7.csv  benchmark_sdks_i7.csv
cmake/: Conan.cmake  FindSndFile.cmake  (+6 more)
doc/: CMakeLists.txt  Doxyfile.in  DoxygenLayout.xml
examples/host/: CMakeLists.txt  FFT.cpp  FFT.hpp  FFT_Kiss.cpp  FFT_NotFound.cpp  helper.hpp  host.cpp  main.cpp
examples/minimal/: CMakeLists.txt  host.cpp  plugin.cpp
hostsdk/: CMakeLists.txt
hostsdk/include/rtvamp/: hostsdk.hpp
hostsdk/include/rtvamp/hostsdk/: Plugin.hpp  PluginHostAdapter.hpp  PluginKey.hpp  PluginLibrary.hpp  PluginLoader.hpp
hostsdk/src/: DynamicLibrary.hpp  DynamicLibrary_Unix.cpp  DynamicLibrary_Windows.cpp  PluginHostAdapter.cpp  PluginKey.cpp  PluginLibrary.cpp  PluginLibrary.hpp  PluginLibrary_Unix.cpp  PluginLibrary_Windows.cpp  PluginLoader.cpp  helper.hpp  hostsdk.cpp
hostsdk/tests/: CMakeLists.txt  Common.cpp  DynamicLibrary.cpp  InvalidPlugin.cpp  PluginHostAdapter.cpp  PluginKey.cpp  PluginLibrary.cpp  PluginLoader.cpp  TestPluginDescriptor.hpp  config.hpp.in  helper.hpp  hostsdk.cpp
plugin/: CMakeLists.txt
plugin/include/rt-vamp-plugin/: EntryPoint.hpp  Plugin.hpp  PluginAdapter.h  PluginAdapter.hpp  PluginDefinition.hpp  VampWrapper.hpp  debug.hpp
plugin/src/: Plugin.cpp  PluginAdapter.cpp  PluginInstanceAdapter.hpp  VampFeatureWrapper.hpp  VampOutputDescriptorCpp.h  VampOutputDescriptorWrapper.h  VampOutputDescriptorWrapper.hpp  VampPluginDescriptorCpp.h  VampPluginDescriptorWrapper.hpp  debug.hpp  helper.h  helper.hpp
plugin/tests/: CMakeLists.txt  EntryPoint.cpp  Plugin.cpp  PluginAdapter.cpp  PluginDefinition.cpp  TestPlugin.h  TestPlugin.hpp  VampFeatureWrapper.cpp  VampOutputDescriptorCpp.cpp  VampOutputDescriptorWrapper.cpp  VampWrapper.cpp
pluginsdk/: CMakeLists.txt
pluginsdk/include/rtvamp/: pluginsdk.hpp
pluginsdk/include/rtvamp/pluginsdk/: EntryPoint.hpp  Plugin.hpp  PluginAdapter.hpp  PluginDefinition.hpp  PluginExt.hpp  VampWrapper.hpp  macros.hpp
pluginsdk/include/rtvamp/pluginsdk/detail/: PluginAdapter.hpp  VampWrapper.hpp  macros.hpp
pluginsdk/tests/: CMakeLists.txt  EntryPoint.cpp  Plugin.cpp  PluginAdapter.cpp  PluginDefinition.cpp  PluginExt.cpp  TestPlugin.hpp  VampWrapper.cpp
python/: .buildinfo  CMakeLists.txt  README.md  api.html  genindex.html  index.html  objects.inv  search.html  searchindex.js  sg_execution_times.html
python/_downloads/05315b8d3346f953716e476d04926b47/: ex1_discovery.ipynb
python/_downloads/d33a6a51e525809f2cc76579ec800962/: ex2_compute_features.ipynb
python/_downloads/eca336b99961daa335b7dedd5c528da7/: ex2_compute_features.py
python/_downloads/f3fae75f8ce86967133ae0926d853ed1/: ex2_compute_features.py
python/_downloads/fae4e1d97304f74de093e9661c5f3714/: ex1_discovery.py
python/_examples/: ex1_discovery.html  ex2_compute_features.html  index.html  sg_execution_times.html
python/_generated/: rtvamp.FeatureComputation.html  rtvamp.Plugin.html  rtvamp.PluginLibrary.html  rtvamp.PluginMetadata.html  rtvamp.compute_features.html  rtvamp.get_plugin_metadata.html  rtvamp.get_vamp_paths.html  rtvamp.list_libraries.html  rtvamp.list_plugins.html  rtvamp.load_library.html  rtvamp.load_plugin.html
python/_sources/: api.rst.txt  index.rst.txt  sg_execution_times.rst.txt
python/_sources/_examples/: ex1_discovery.rst.txt  ex2_compute_features.rst.txt  index.rst.txt  sg_execution_times.rst.txt
python/_sources/_generated/: rtvamp.FeatureComputation.rst.txt  rtvamp.PluginLibrary.rst.txt  rtvamp.get_vamp_paths.rst.txt  rtvamp.list_libraries.rst.txt  rtvamp.load_plugin.rst.txt
python/_sources/api/: rtvamp.Plugin.rst.txt  rtvamp.PluginMetadata.rst.txt  rtvamp.compute_features.rst.txt  rtvamp.get_plugin_metadata.rst.txt  rtvamp.list_plugins.rst.txt  rtvamp.load_library.rst.txt
python/_sources/examples/: ex1_discovery.rst.txt  ex2_compute_features.rst.txt  index.rst.txt  sg_execution_times.rst.txt
python/api/: rtvamp.FeatureComputation.html  rtvamp.Plugin.html  rtvamp.PluginLibrary.html  rtvamp.PluginMetadata.html  rtvamp.compute_features.html  rtvamp.get_plugin_metadata.html  rtvamp.get_vamp_paths.html  rtvamp.list_libraries.html  rtvamp.list_plugins.html  rtvamp.load_library.html  rtvamp.load_plugin.html
python/docs/: .gitignore  conf.py  index.rst
python/examples/: README.md  ex1_discovery.html  ex1_discovery.py  ex2_compute_features.html  index.html  sg_execution_times.html
python/src/: bindings.cpp
python/src/rtvamp/: __init__.py
python/tests/: _helper.py  test_highlevel.py  test_lowlevel.py
(+85 files in other folders)
