[build-system]
requires = [
    "setuptools>=42",
    "pybind11~=2.10",
    "cmake>=3.22",
    "scikit-build>=0.15.0",
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100

[tool.isort]
line_length = 100
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -v"
testpaths = ["python/tests"]
