[build-system]
requires = [
    "setuptools>=42",
    "pybind11~=2.10",
    "cmake>=3.22",
    "scikit-build>=0.15.0",
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100

[tool.isort]
line_length = 100
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -v"
testpaths = ["python/tests"]

[tool.cibuildwheel]
build = [
    # https://cibuildwheel.pypa.io/en/stable/options/#build-skip
    "cp3*-manylinux_x86_64",
    "cp3*-manylinux_aarch64",
    "cp3*-macosx_x86_64",
    "cp3*-macosx_arm64",
    "cp3*-win_amd64",
]
skip = [
    "cp38-macosx_arm64", # https://cibuildwheel.pypa.io/en/stable/faq/#macos-building-cpython-38-wheels-on-arm64
]
build-verbosity = 1
